# zero2prod

./: Cargo.toml  README.md  config.toml  configuration.yml  docker-compose.yml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-14c8f9cc8c5bb08aee8e18658d56d50300bdc59be5b79db89fad058de0e188d9.json
migrations/: 20230913063440_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
